tests/lean/3989_2.lean.expected.out
3989_2.lean:6:0: error: expected else-alternative for `match_expr`, i.e., `| _ => ...`
3989_2.lean:1:22-1:32: error: Function expected at
  MetaM
but this term has type
  ?m

Note: Expected a function because this term is being applied to the argument
  Expr

Hint: This error occurred after the identifiers `Expr` and `MetaM` had been identified as free variables and automatically given implicit bindings. Are those identifiers all supposed to be implicitly bound? Automatic implicit binding can sometimes occur due to typos or missing `import` or `open` statements, and this may cause unexpected errors.
Nat : Type
